--- a/resources/unit_test.properties
+++ b/resources/unit_test.properties
@@ -16,19 +16,30 @@ freq_ingest=ibis.freq_ingest
 [Workflows]
 workflow_host=fake.workflow.host
 workflow_hive2_jdbc_url=jdbc:hive2://test-fake.hive:25006/default
+git_workflows_dir=DEV
 kerberos=fake.kerberos
 db_env=DEV
 hdfs_ingest_version=
+profileRequired=False
 
 [Directories]
 logs=/ibis/test_logs/
 files=/ibis/test_files/
 saves=/ibis/test_workflows/
+git_wf_local_dir=/ibis/test_workflows-git/
+podium_ds_dir=/ibis/podium_ds/
 requests_dir=/opt/app/ibis/requestFiles/
 root_hdfs_saves=mdm
 export_hdfs_root=/ibis/outbound/export/
 custom_scripts_shell=/user/dev/oozie/workspaces/ibis/shell
 custom_scripts_hql=/user/dev/oozie/workspaces/ibis/hql
+hdfs=/user/fake_opendev/fake_open_framework/
+hdfsmodel=/user/fake_opendev/fake_open_models/
+workdir=/opt/app/fake_open/fake_open_framework/job_control/dynamic_wf/work/
+pod_shell_dir=/user/dev/oozie/workspaces/podium-ibis/podium-push/podium_push.sh#podium_push.sh
+checks_balance_shell_dir=/user/dev/oozie/workspaces/podium-ibis/podium-push/checks_balances.sh#checks_balances.sh
+pod_shell_name=podium_push.sh
+checks_balance_shell_name=checks_balances.sh
 kite_shell_dir=/user/dev/oozie/workspaces/ibis/lib/ingest/kite.sh#kite.sh
 kite_shell_name=kite.sh
 
@@ -60,6 +71,16 @@ hql_views_workspace=/user/dev/oozie/workspaces/ibis/hql
 shell_workspace=/user/dev/oozie/workspaces/shell-adhoc
 impala_workspace=/user/dev/oozie/workspaces/impala-adhoc
 
+[Podium]
+podium_url=https://fake.dev.podium:8443/podium/
+podium_user=m35008
+podium_pass=xxx
+ds_git_url=git@fake.git:podium/podibis-requests.git
+it_requests_git_url=git@fake.git:fake_teamname/ibis-requests.git
+it_requests_git_branch=podium-requests
+requests_split_by=10
+path=/podiumd/receiving/PDM_
+
 [ESP_ID]
 big_data=FAKE
 frequencies_map=daily:D,biweekly:B,weekly:W,fortnightly:F,monthly:M,quarterly:Q,adhoc:A,onetime:O,mul-appls:X,yearly:Y
@@ -69,9 +90,13 @@ from_branch=dev
 [Other]
 allowed_frequencies=000:none,101:daily,011:biweekly,100:weekly,110:fortnightly,010:monthly,001:quarterly,111:yearly
 vizoozie=vizoozie.properties
+git_workflows_url=git@fake.git:fake_teamname/ibis-workflows.git
+git_requests_url=git@fake.git:fake_teamname/ibis-requests.git
 max_table_per_workflow=5
+sas_server=fake.sas.server
+sas_command=exec bash /home/fake_open/scripts/fake_openSAS.sh
 parallel_dryrun_procs=3
 parallel_sqoop_procs=3
 domain_suffix=_i
-domains_list=domain1,domain2,domain3
-teradata_server=fake.teradata:fake,fake.teradata2:fake,fake.teradata3:fake,fake.teradata4:fake
+domains_list=pharmacy,client,customer,portal,logs,member,audit,call,claim,clinic,structure,provider,benefits
+tearadata_server=fake.teradata:fake,fake.teradata2:fake,fake.teradata3:fake,fake.teradata4:fake
