--- a/resources/int_test.properties
+++ b/resources/int_test.properties
@@ -77,4 +77,4 @@ parallel_dryrun_procs=3
 parallel_sqoop_procs=3
 domain_suffix=_i
 domains_list=pharmacy,client,customer,portal,logs,member,audit,call,claim,clinic,structure,provider,benefits
-tearadata_server=fake.teradata1:fake,fake.teradata2:fake,fake.teradata3:fake,fake.teradata4:fake
+teradata_server=fake.teradata1:fake,fake.teradata2:fake,fake.teradata3:fake,fake.teradata4:fake
