--- a/resources/dev_perf.properties
+++ b/resources/dev_perf.properties
@@ -62,7 +62,7 @@ shell_workspace=/user/dev/oozie/workspaces/shell-adhoc
 impala_workspace=/user/dev/oozie/workspaces/impala-adhoc
 
 [ESP_ID]
-big_data=PVS_FAKE
+big_data=PERF_FAKE
 frequencies_map=daily:D,biweekly:B,weekly:W,fortnightly:F,monthly:M,quarterly:Q,adhoc:A,onetime:O,mul-appls:X,yearly:Y
 environment_map=1
 from_branch=dev
