--- a/resources/perf.properties
+++ b/resources/perf.properties
@@ -17,7 +17,7 @@ freq_ingest=ibis.freq_ingest
 workflow_host=fake.int.impala
 workflow_hive2_jdbc_url=jdbc:hive2://fake.int.hive:25006/default
 git_workflows_dir=INT
-db_env=PVS
+db_env=PERF
 kerberos=fake.kerberos
 hdfs_ingest_version=v11
 
@@ -62,7 +62,7 @@ shell_workspace=/user/dev/oozie/workspaces/shell-adhoc
 impala_workspace=/user/dev/oozie/workspaces/impala-adhoc
 
 [ESP_ID]
-big_data=PVS_FAKE
+big_data=PERF_FAKE
 frequencies_map=daily:D,biweekly:B,weekly:W,fortnightly:F,monthly:M,quarterly:Q,adhoc:A,onetime:O,mul-appls:X,yearly:Y
 environment_map=4
 from_branch=int
