--- a/resources/dev_perf.properties
+++ b/resources/dev_perf.properties
@@ -2,13 +2,13 @@
 host=fake.dev.impala
 port=25003
 use_kerberos=True
-it_table=ibis.pvs_it_table_test
+it_table=ibis.perf_it_table_test
 it_table_export=ibis.dev_it_table_export
 staging_database=fake_staging_database
 checks_balances=ibis.checks_balances
-esp_ids_table=ibis.pvs_esp_ids
+esp_ids_table=ibis.perf_esp_ids
 staging_it_table=ibis.staging_it_table
-prod_it_table=ibis.pvs_it_table_test
+prod_it_table=ibis.perf_it_table_test
 queue_name=ingestion
 edge_node=fake.dev.edgenode
 freq_ingest=ibis.freq_ingest
