--- a/resources/perf.properties
+++ b/resources/perf.properties
@@ -2,13 +2,13 @@
 host=fake.int.impala
 port=25003
 use_kerberos=True
-it_table=ibis.pvs_it_table
-it_table_export = ibis.pvs_it_table_export
+it_table=ibis.perf_it_table
+it_table_export = ibis.perf_it_table_export
 staging_database=fake_int_staging_datbase
 checks_balances=ibis.checks_balances
-esp_ids_table=ibis.pvs_esp_ids
+esp_ids_table=ibis.perf_esp_ids
 staging_it_table=ibis.staging_it_table
-prod_it_table=ibis.pvs_it_table
+prod_it_table=ibis.perf_it_table
 queue_name=ingestion
 edge_node=fake.int.edgenode
 freq_ingest=ibis.freq_ingest
