--- a/resources/unit_test.properties
+++ b/resources/unit_test.properties
@@ -77,5 +77,5 @@ max_table_per_workflow=5
 parallel_dryrun_procs=3
 parallel_sqoop_procs=3
 domain_suffix=_i
-domains_list=pharmacy,client,customer,portal,logs,member,audit,call,claim,clinic,structure,provider,benefits
+domains_list=domain1,domain2,domain3
 teradata_server=fake.teradata:fake,fake.teradata2:fake,fake.teradata3:fake,fake.teradata4:fake
