Update esp to automation

--- a/resources/unit_test.properties
+++ b/resources/unit_test.properties
@@ -5,7 +5,7 @@ use_kerberos = True
 it_table = ibis.dev_it_table
 staging_database=fake_staging_database
 checks_balances=ibis.checks_balances
-esp_ids_table=ibis.esp_ids
+automation_ids_table=ibis.automation_ids
 staging_it_table=ibis.staging_it_table
 prod_it_table=ibis.prod_it_table
 queue_name=fake_group
@@ -37,7 +37,7 @@ kite_shell_name=kite.sh
 start_workflow=start.xml.mako
 end_workflow=end.xml.mako
 export_end_workflow=export_end.xml.mako
-korn_shell=esp_template.ksh.mako
+korn_shell=automation_template.ksh.mako
 job_properties=prod_job.properties
 sub_workflow=subworkflow.xml
 export_to_td=export_to_td.xml
@@ -60,7 +60,7 @@ hql_views_workspace=/user/dev/oozie/workspaces/ibis/hql
 shell_workspace=/user/dev/oozie/workspaces/shell-adhoc
 impala_workspace=/user/dev/oozie/workspaces/impala-adhoc
 
-[ESP_ID]
+[automation_ID]
 big_data=FAKE
 frequencies_map=daily:D,biweekly:B,weekly:W,fortnightly:F,monthly:M,quarterly:Q,adhoc:A,onetime:O,mul-appls:X,yearly:Y
 environment_map=1
