--- a/ibis/utilities/tests/fixtures/sample_wf_job.properties
+++ b/ibis/utilities/tests/fixtures/sample_wf_job.properties
@@ -9,7 +9,7 @@ fs.hdfs.impl.disable.cache=true
 fetchSize=50000
 hive2_jdbc_url=jdbc:hive2://fake.hive:25006/default
 impala_daemon=fake.impala:25004
-esp_appl_id=TEST01
+automation_appl_id=TEST01
 oozie.wf.application.path=${nameNode}/user/dev/oozie/workspaces/ibis/workflows/test.xml
 workflowName=test
 #List of tables ingested: test_table
